# life-pod

./: .gitignore  LICENSE  README.md  buildozer.spec  pyproject.toml
.github/workflows/: build-apk.yml
scripts/: run.sh
src/: main.py
src/life_pod/: __main__.py  assets.py  game.py  gui.py  guiapp.py  lifepod.kv  player.py  round.py
tests/: PhoneSpecs.md
